# ndk_jni_learning_demo

./: README.md
ndk/: .gitattributes  .gitignore
ndk/app/: CMakeLists.txt  build.gradle
ndk/app/src/androidTest/java/com/example/administrator/ndk/: ExampleInstrumentedTest.java
ndk/app/src/main/: AndroidManifest.xml
ndk/app/src/main/cpp/: c01.c  c02.c  c03.c  c04.c  c05.c  c06.c  native-lib.cpp
ndk/app/src/main/cpp/c/: c01.c  c02.c  c03.c  c04.c  c05.c  c06.c
ndk/app/src/main/cpp/compute/: Operate.c  Operate.h
ndk/app/src/main/cpp/jni/: A.h  B.h  jni01.c  jni02.c  jni03.c  jni04.c  jni05.c
ndk/app/src/main/java/com/example/administrator/ndk/: MainActivity.java  MainActivityC.java  MainActivityJni.java  MyClass.java
ndk/app/src/main/java/com/example/administrator/ndk/utils/: StringUtils.java
ndk/app/src/main/java/com/ndk/use/: HelloJni.java  JniUtils.java  NdkC.java  NdkC01.java  NdkJni.java
ndk/app/src/main/res/layout/: activity_main.xml  activity_main_c.xml  activity_main_jni.xml
ndk/app/src/main/res/values/: strings.xml
ndk/app/src/test/java/com/example/administrator/ndk/: ExampleUnitTest.java
ndk/gradle/wrapper/: gradle-wrapper.properties
